# todo-drf

./: .gitignore  README.md  pyproject.toml
todo_project/: urls.py
todo_project/todo_project/: settings.py  urls.py
todo_project/todos/: serializers.py
todo_project/todos/migrations/: 0001_initial.py
todos/: models.py  urls.py  views.py
todos/migrations/: 0002_todo_is_completed.py
