[project]
name = "todo-drf"
version = "0.1.0"
description = "A simple to-do app built with Django and DRF"
authors = [
    {name = "dead1x"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/dead1x/todo-drf"
requires-python = "^3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.3.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
